syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

// model
message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// unary request
message GreetUnaryRequest {
  Greeting greeting = 1;
}

// server streaming request
message GreetServerStreamingRequest {
  Greeting greeting = 1;
}

// client streaming request
message GreetClientStreamingRequest {
  Greeting greeting = 1;
}

// bidirectional streaming request
message GreetBidirectionalStreamingRequest {
  Greeting greeting = 1;
}

// unary response
message GreetUnaryResponse {
  string result = 1;
}

// server streaming response
message GreetServerStreamingResponse {
  string result = 1;
}

// client streaming response
message GreetClientStreamingResponse {
  string result = 1;
}

// bidirectional streaming response
message GreetBidirectionalStreamingResponse {
  string result = 1;
}

service GreetService{
  // unary
  rpc GreetUnary(GreetUnaryRequest) returns (GreetUnaryResponse) {}

  // server streaming
  rpc GreetServerStreaming(GreetServerStreamingRequest) returns (stream GreetServerStreamingResponse) {}

  // client streaming
  rpc GreetClientStreaming(stream GreetClientStreamingRequest) returns (GreetClientStreamingResponse) {}

  // bidirectional streaming
  rpc GreetBidirectionalStreaming(stream GreetBidirectionalStreamingRequest) returns (stream GreetBidirectionalStreamingResponse) {}
}